# CameraFileCopy

./: .gitignore  IOS_MIGRATION_NOTES.md  Podfile  build_cpp.sh
CameraFileCopy/: AppDelegate.h  AppDelegate.m  IOS_CMAKE_USAGE.md  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  build_ios.sh  cfc_wrapper.cpp  cfc_wrapper.hpp  main.m
CameraFileCopy.xcodeproj/: project.pbxproj
CameraFileCopy/Base.lproj/: Main.storyboard
CameraFileCopy/cpp/: CMakeLists.txt
CameraFileCopy/cpp/cfc-cpp/: CMakeLists.txt  jni.cpp
CameraFileCopy/cpp/libcimbar/: CMakeLists.txt
CameraFileCopy/cpp/libcimbar/ios_includes/: correct-sse.h  fec.c  fec.h  jni.h  sse_compat.h  sse_lookup.c  third_party_lib  thread
CameraFileCopy/cpp/libcimbar/ios_includes/android/: log.h
CameraFileCopy/cpp/libcimbar/ios_includes/cfc-cpp/: jni.cpp
CameraFileCopy/cpp/libcimbar/ios_includes/correct/: convolutional.h
CameraFileCopy/cpp/libcimbar/ios_includes/correct/convolutional/: bit.h  convolutional.h  error_buffer.c  error_buffer.h  history_buffer.c  history_buffer.h  lookup.c  lookup.h  metric.h
CameraFileCopy/cpp/libcimbar/ios_includes/correct/convolutional/sse/: convolutional.h  decode.c  lookup.h  sse_compat.h
CameraFileCopy/cpp/libcimbar/ios_includes/ios_compat/: this_thread.h  thread.h
CameraFileCopy/cpp/libcimbar/src/exe/cimbar_recv/: recv.cpp
CameraFileCopy/cpp/libcimbar/src/exe/cimbar_send/: CMakeLists.txt  send.cpp
CameraFileCopy/cpp/libcimbar/src/lib/chromatic_adaptation/: CMakeLists.txt
CameraFileCopy/cpp/libcimbar/src/lib/cimb_translator/: CMakeLists.txt  bitmaps.h
CameraFileCopy/cpp/libcimbar/src/lib/cimbar_js/: cimbar_js.cpp  cimbar_js.h
CameraFileCopy/cpp/libcimbar/src/lib/compression/: zstd_compressor.h  zstd_decompressor.h  zstd_dstream.h
CameraFileCopy/cpp/libcimbar/src/lib/extractor/: CMakeLists.txt
CameraFileCopy/cpp/libcimbar/src/lib/gui/: gl_2d_display.h  gl_program.h  gl_shader.h  mat_to_gl.h  window_glfw.h
CameraFileCopy/cpp/libcimbar/src/lib/util/: MakeTempDirectory.h
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/: CMakeLists.txt  decode.c
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/include/correct/convolutional/sse/: convolutional.h  lookup.h
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/src/convolutional/: CMakeLists.txt  encode.c  history_buffer.c
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/src/convolutional/sse/: CMakeLists.txt  convolutional.c  decode.c  lookup.c
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/tests/: convolutional-fec-stub.c  convolutional-fec.c  rs_tester_fec.c  test_symbols.h
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/tests/include/: rs_tester_fec.h
CameraFileCopy/cpp/libcimbar/src/third_party_lib/libcorrect/tools/: find_conv_libfec_poly.c  find_conv_optim_poly.c  find_conv_optim_poly_annealing.c  find_rs_primitive_poly.c
CameraFileCopy/cpp/libcimbar/src/third_party_lib/wirehair/: CMakeLists.txt  WirehairTools.h  gf256.cpp  wirehair.cpp
CameraFileCopy/cpp/libcimbar/src/third_party_lib/wirehair/test/: UnitTest.cpp
CameraFileCopy/cpp/opencv2/: opencv.hpp
